# Docx2Draw

./: .dockerignore  .env.example  .gitignore  Doc2Draw_FullStack_Implementation_Guide.md  README.md  Word_to_Excalidraw_AI_Product_Blueprint.md  docker-compose.yml  fix-env.ps1  render.yaml  run.ps1  run.sh  setup-cloud.ps1  setup.py
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py  util.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: projects.py  users.py  webhooks.py
backend/app/core/: __init__.py  auth.py  exceptions.py  security.py
backend/app/models/: __init__.py  db_models.py  schemas.py
backend/app/services/: __init__.py  billing_service.py  generator_service.py  storage_service.py
backend/app/workers/: __init__.py  store.py  tasks.py
doc2draw/: __init__.py  __main__.py  cli.py  utils.py
doc2draw/ai/: __init__.py  extractor.py  schemas.py
doc2draw/compiler/: __init__.py  excalidraw_compiler.py
doc2draw/layout/: __init__.py  excalidraw_elements.py  grid_engine.py
doc2draw/parsers/: __init__.py  docx_parser.py  media_parser.py  pdf_parser.py
doc2draw/schemas/: __init__.py  diagram_schema.py
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useExcalidraw.ts  useProjectStatus.ts
frontend/src/lib/: api.ts  projects.ts  supabase.ts  utils.ts
supabase/: schema.sql
tests/: test_backend.py  test_doc2draw.py
(+14 files in other folders)
