[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc2draw-backend"
version = "1.0.0"
description = "FastAPI backend for Doc2Draw AI — documents/videos into Excalidraw visual maps"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-docx>=0.8.11",
    "pypdf>=3.0.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "sqlmodel>=0.0.14",
    "python-jose[cryptography]>=3.3.0",
    "supabase>=2.0.0",
    "stripe>=7.0.0",
]

[project.optional-dependencies]
media = ["opencv-python>=4.8.0"]
dev = ["pytest>=7.0.0", "httpx>=0.27.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
